add user authentication

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,20 @@
 </head>
 <body>
 
-<%= yield %>
+<div id="header">
+  <h1>App Marketing Tool</h1>
+    <% if session[:uid] %>
+        <%= link_to "Logout", logout_url, :method => :delete %>
+    <% else %>
+        <%= link_to "Create Account", new_user_url %>
+    <% end %>
+</div>
 
+  <% if flash[:notice].present? %>
+    <p><%= flash[:notice] %></p>
+    <% end %>
+
+
+<%= yield %>
 </body>
 </html>
